--- a/source/_posts/2019-06-16-mac下前端及php开发环境要点记录.md
+++ b/source/_posts/2019-06-16-mac下前端及php开发环境要点记录.md
@@ -176,4 +176,7 @@ telnet: connect to address 192.168.56.103: Operation timed out
 telnet: Unable to connect to remote host
 ```
 
+### sequelpro
+mysql可视化工具。安装方式：http://www.sequelpro.com/
+
 
