--- a/source/_posts/2019-06-16-ssh连接基本使用方法.md
+++ b/source/_posts/2019-06-16-ssh连接基本使用方法.md
@@ -70,7 +70,7 @@ Port 12345
 第二步，通过iptables开放上一步指定的端口
 ```bash
 iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 12345 -j ACCEPT 
-iptables-save
+service iptables save
 ```
 
 第三步，重启sshd
@@ -142,5 +142,10 @@ ssh-add -l 查看现在增加进去的指纹信息
 ssh-add -L 查看现在增加进去的私钥
 ```
 根据需要选择是否要用，用的时候再来尝试。
+
+**补充**
+ssh-add是session级别的暂存密钥文件的密码，电脑重启后就失效了。mac os下提供了新的方式来持久化存储密码，在config文件中，可以加入UseKeychain yes启用keychain来存储密钥文件的密码，只要用户输入过一次密码，这个密码就会被存入keychain，重启后不用重新再输入密码。
+
+
 
 
