--- a/source/_posts/2019-11-24-小项目：node抓取搜狗拼音输入法的细胞词库链接并下载到本地.md
+++ b/source/_posts/2019-11-24-小项目：node抓取搜狗拼音输入法的细胞词库链接并下载到本地.md
@@ -10,6 +10,8 @@ categories:
   - node
 ---
 
+项目地址：[sougou_cell_dict](https://github.com/liuyunzhuge/sougou_cell_dict)
+
 ## 背景
 这个项目是源于工作中需要扩充mmseg3分词工具的词库，选择搜狗输入法的细胞词库作为扩充来源。由于细胞词库众多，不打算使用一个个下载的方式，下载词库只是扩充mmseg3的第一步工作，后面还需要使用其它工具对词库文件进行转换，以便应用到mmseg3里面去。由于以前也没怎么写过node相关的工具，更没有接触过爬虫类的功能，所以借助这样一个机会，打算来试试这方面的编码。观察了一下搜狗输入的细胞词库的相关页面，发现它对细胞词库有比较清晰的组织方式，而且下载链接也很直接，利用爬虫的话，比较好处理相关的数据。所以快速学习了下node爬虫和node下载文件的几个知识点，开发出了这样一个小项目。
 
