--- a/source/_posts/2019-11-28-code-sets.md
+++ b/source/_posts/2019-11-28-code-sets.md
@@ -20,3 +20,5 @@ categories:
 * [zepto/ajax](https://github.com/madrobby/zepto/blob/master/src/ajax.js)
 * [AlloyTeam/AlloyFinger](https://github.com/AlloyTeam/AlloyFinger/blob/master/alloy_finger.js)
 * [a-promise](https://github.com/liuyunzhuge/a-promise/tree/master/src)
+* [auto_run_generator_function_with_promise](http://blog.liuyunzhuge.com/code/es6/generator/auto_run_gen_with_promise.html)
+* [auto_run_generator_function_with_thunk](http://blog.liuyunzhuge.com/code/es6/generator/auto_run_gen_with_thunk.html)
