--- a/themes/next/languages/zh-CN.yml
+++ b/themes/next/languages/zh-CN.yml
@@ -13,7 +13,7 @@ menu:
   search: 搜索
   schedule: 日程表
   sitemap: 站点地图
-  old_blog: 旧博客
+  old_blog: 博客园[2015-2016]
   commonweal: 公益 404
 sidebar:
   overview: 站点概览
